# meye

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  success.html
docs/superpowers/plans/: 2026-05-24-meye-phase0-1.md  2026-05-24-screenpipe-keeper.md
docs/superpowers/specs/: 2026-05-24-meye-design.md  2026-05-24-screenpipe-keeper-design.md  2026-06-17-default-pipes-seeding-design.md  2026-06-17-remote-meeting-audio-design.md
src/: api.ts  chat.ts  devices.ts  home.ts  live.ts  main.ts  md.ts  memory.ts  onboarding.ts  palette.ts  performance.ts  pipes.ts  privacy.ts  remote.ts  schedule.ts  search.ts  settings.ts  status.ts  styles.css  tabs.ts  timeline.ts  ui.ts  voice.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/pipes/ai-habits/.pi/extensions/: mcp-bridge.ts
src-tauri/resources/pipes/ai-habits/.pi/skills/screenpipe-api/: SKILL.md
src-tauri/resources/pipes/meeting-summary/.pi/extensions/: web-search.ts
src-tauri/resources/pipes/monthly-summary/: pipe.md
src-tauri/resources/pipes/obsidian-sync/: pipe.md
src-tauri/resources/pipes/time-breakdown/: pipe.md
src-tauri/resources/pipes/weekly-summary/: pipe.md
src-tauri/resources/pipes/yearly-summary/: pipe.md
src-tauri/src/: activity.rs  agent.rs  agent_macos.rs  agent_windows.rs  binary.rs  chat.rs  commands.rs  health.rs  lib.rs  main.rs  paths.rs  perf.rs  pipes.rs  prefs.rs  procutil.rs  screenpipe_api.rs  voice.rs
