[package]
name = "meye"
version = "0.1.13"
description = "Meye — local personal-memory app on screenpipe"
authors = ["Mark Uretsky"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

# getuid for launchctl gui/<uid> targets — macOS only
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# Leaner, faster release binary (smaller footprint).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

